ids-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ids-backend
  labels:
    app: ids-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ids-backend
